// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Coverage startCSSCoverage, stopCSSCoverage 1`] = `
Array [
  Object {
    "ranges": Array [
      Object {
        "end": 26,
        "start": 3,
      },
    ],
    "text": "
		input { color: green; }
		a { color: blue; }
		",
    "url": "file:///home/jihchi/repos/bs-puppeteer/__tests__/fixtures/testPage.html",
  },
]
`;

exports[`Coverage startJSCoverage, stopJSCoverage 1`] = `
Array [
  Object {
    "ranges": Array [
      Object {
        "end": 19,
        "start": 0,
      },
      Object {
        "end": 63,
        "start": 37,
      },
    ],
    "text": "
		function foo() {function bar() { } console.log(1); } foo(); ",
    "url": "file:///home/jihchi/repos/bs-puppeteer/__tests__/fixtures/testPage.html",
  },
]
`;
